# kafka-scylla-micro

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
messenger/: Cargo.toml  Dockerfile  kafka.sh
messenger/src/: .router.rs.swp  kafka.rs  main.rs  queries.rs  router.rs  secrets.rs
