[package]
name = "messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4" }
dotenvy = "0.15.7"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
rdkafka = { version = "0.36.2", features = ["cmake-build", "gssapi"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
scylla = "0.12.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
